--- a/pages/visit.html
+++ b/pages/visit.html
@@ -24,39 +24,19 @@
     </head>
     <body>
         <div id="all"><!-- #BeginLibraryItem "../lib/navbar.lbi" -->
-            <div id="head">
-                <div class="mast">
-                    <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
-                    <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right">
-                </div>
-                <div class="navb">
-                    <!--
-                    -->
-                    <a href="home.html">Home</a>
-                    <!--
-                    -->
-                    <a href="visit.html">Visit our booth</a>
-                    <!--
-                    -->
-                    <a href="about.html">About Wells Fargo</a>
-                    <!--
-                    -->
-                    <a href="explore.html">Explore Osaka</a>
-                    <!--
-                    -->
-                    <a href="pubs.html">Publications</a>
-                    <!--
-                    -->
-                    <a href="giving.html">Charitable giving</a>
-                    <!--
-                    -->
-                    <a style="border-right: 0;" href="photos.html">Gallery</a>
-                    <!--
-                    -->
-                </div>
-            </div>
-            <!-- #EndLibraryItem -->
-            <div id="feature">
+<div id="head">
+    <div class="mast"><img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left"> <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right"></div>
+    <div class="navb"><!--
+--> <a href="home.html">Home</a> <!--
+--> <a href="about.html">About Wells Fargo</a> <!--
+--> <a href="events.html">Sibos Events</a> <!--
+--> <a href="boot.html">Wells Fargo Booth</a><!--
+--> <a href="speakers.html">Sibos Speakers</a><!--
+--> <a href="explore.html">Explore Dubai</a> <!--
+--> <a href="giving.html">Charitable giving</a> <!--
+--> </div>
+</div>
+<!-- #EndLibraryItem --><div id="feature">
                 <img class="banner" src="../images/banner/bannerB.jpg" width="898" height="241" alt="">
                 <table border="0" cellspacing="10">
                     <tr>
@@ -164,33 +144,33 @@
                     </video>
                     <br>
                     CLICK OUTSIDE VIDEO TO CLOSE </div>
-            </div>
-            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
-            <div id="footer">
-                <div id="sharebar">
-                    <script src="http://w.sharethis.com/button/buttons.js"></script>
-                    <p class="cap">Share this page
-                        <!-- -->
-                        <span id="st_twitter"></span>
-                        <!-- -->
-                        <span id="st_linkedin"></span>
-                        <!-- -->
-                        <span id="st_email"></span>
-                        <!-- -->
-                        <span id="st_facebook"></span>
-                        <!-- -->
-                        <span id="st_googleplus"></span>
-                        <!-- -->
-                        <span id="st_pinterest"></span>
-                        <!-- -->
-                    </p>
-                    <script src="../script/share.js"></script>
-                </div>
-                <p>© 2012 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
-                <script src="../lib/nosel.js"></script>
-                <script src="../script/main.js"></script>
-                <script src="../script/ecg-ga.js"></script>
-            </div>
-            <!-- #EndLibraryItem --></div>
+            </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+
+<div id="footer">
+    <div id="sharebar">
+        <script src="http://w.sharethis.com/button/buttons.js"></script>
+        <p class="cap">Share this page
+            <!-- -->
+	        <span id="st_twitter"></span>
+            <!-- -->
+            <span id="st_linkedin"></span>
+            <!-- -->
+            <span id="st_email"></span>
+            <!-- -->
+            <span id="st_facebook"></span>
+            <!-- -->
+            <span id="st_googleplus"></span>
+            <!-- -->
+            <span id="st_pinterest"></span>
+            <!-- -->
+        </p>
+	    <script src="../script/share.js"></script>
+    </div>
+    <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
+    <script src="../lib/nosel.js"></script>
+    <script src="../script/main.js"></script>
+    <script src="../script/ecg-ga.js"></script>
+</div>
+<!-- #EndLibraryItem --></div>
     </body>
 </html>
