--- a/pages/home.html
+++ b/pages/home.html
@@ -18,21 +18,43 @@
         <link rel="stylesheet" href="../style/main.css" type="text/css">
     </head>
     <body>
-        <div id="all"><!-- #BeginLibraryItem "../lib/navbar.lbi" -->
-<div id="head">
-    <div class="mast"><img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left"> <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right"></div>
-    <div class="navb"><!--
---> <a href="home.html">Home</a> <!--
---> <a href="about.html">About Wells Fargo</a> <!--
---> <a href="events.html">Sibos Events</a> <!--
---> <a href="boot.html">Wells Fargo Booth</a><!--
---> <a href="speakers.html">Sibos Speakers</a><!--
---> <a href="explore.html">Explore Dubai</a> <!--
---> <a href="giving.html">Charitable giving</a> <!--
---> </div>
-</div>
-<!-- #EndLibraryItem --><div id="feature">
-                <div id="banner" style="display: none;"> <a href="visit.html">
+        <div id="all">
+            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
+            <div id="head">
+                <div class="mast">
+                    <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
+                    <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right">
+                </div>
+                <div class="navb">
+                    <!--
+--> 
+                    <a href="home.html">Home</a> 
+                    <!--
+--> 
+                    <a href="about.html">About Wells Fargo</a> 
+                    <!--
+--> 
+                    <a href="events.html">Sibos Events</a> 
+                    <!--
+--> 
+                    <a href="booth.html">Wells Fargo Booth</a> 
+                    <!--
+--> 
+                    <a href="speakers.html">Sibos Speakers</a> 
+                    <!--
+--> 
+                    <a href="explore.html">Explore Dubai</a> 
+                    <!--
+--> 
+                    <a href="giving.html">Charitable giving</a> 
+                    <!--
+-->
+                </div>
+            </div>
+            <!-- #EndLibraryItem -->
+            <div id="feature">
+                <div id="banner" style="display: none;">
+                    <a href="visit.html">
                         <img class="banner" src="../images/banner/bannerB_button.jpg" width="898" height="241" alt="visit">
                     </a> <a href="about.html">
                         <img class="banner" src="../images/banner/bannerC_button.jpg" width="898" height="241" alt="about">
@@ -48,116 +70,86 @@
                     <img class="banner" src="../images/banner/bannerA.jpg" width="898" height="241" alt="home">
                 </div>
                 <table border="0" cellspacing="10">
-                    <tr>
-                        <td colspan="2"><h2>Welcome</h2>
-                            <p>Thank you for visiting the Wells Fargo Sibos webpage. Our Global Financial Institutions team has an exciting program
-                                lined up for you during the week of the conference, and we look forward to seeing you in Osaka.</p>
-                            <p>For more information about Sibos 2012, please visit the official Sibos website at <a href="http://www.sibos.com">sibos.com</a>. </p></td>
-                        <td>&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td width="32%" rowspan="2" valign="top" class="blocks"><h3><a class="learn" href="visit.html">learn more</a>Sibos events </h3>
-                            <p><strong>Sunday, October 28</strong><br>
-                                5:00 p.m. – 8:00 p.m.<br>
-                                <a href="../email/727872/index.html">Annual Sibos Celebration</a><br>
-                                Taiko-en<br>
-                                Space is limited, <a href="../email/727872/index.html">RSVP here</a>.</p>
-                            <p><strong>Tuesday, October 30</strong><br>
-                                <em>Transparency: The new paradigm impacting Global Transaction Banking</em><br>
-                                3:00 p.m. – 4:00 pm<br>
-                                Katsura Room L5<br>
-                                Hyatt Regency Hotel<br>
-                                Space is limited, <a href="../email/734818/index.html"> RSVP here</a>. <em><br>
-                                    Please speak with your relationship manager about availability.</em></p>
-                            <p><strong>Tuesday, October 30</strong><br>
-                                4:00 p.m. – 5:30 p.m.<br>
-                                <a href="../email/727874/index.html">Booth reception</a><br>
-                                Wells Fargo booth No. 4B06, Hall 4 </p></td>
-                        <td height="147" valign="top" class="blocks"><h3><a class="learn" href="visit.html">learn more</a>Visit our booth</h3>
-                            <br><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
-                                <img src="../images/text/4B06.png" width="239" height="74" alt="Booth 4B06"></a></td>
-                        <td width="33%" rowspan="2" valign="top" class="blocks" style="position: relative;"><h3>Highlights from Sibos</h3>
-                            <div style="
-
-                                 background-image: url(../images/misc/phonedude.png);
-                                 background-repeat: no-repeat;
-                                 box-sizing: border-box;
-                                 -moz-box-sizing: border-box;
-                                 height: 170px;
-                                 margin: -7px 0 13px -9px;
-                                 padding-top: 5px;
-
-                                 ">
-                                <div style="
-                                     width: 140px;
-                                     right: 20px;
-                                     position: absolute;
-                                     ">
-                                    <h4 style="
-
-                                        font-size: 16px;
-                                        font-weight: normal;
-                                        line-height: 20px;
-                                        margin-bottom: 9px;
-
-                                        "> Follow news from the Wells&nbsp;Fargo booth and daily Sibos conference highlights, including photos and videos. <br>
-                                    </h4>
-                                    <p>
-                                        <a href="http://storify.com/Lou_david/sibos-2012-pre-conference-highlights-2" target="_blank">
-                                            <img class="pushbutton" src="../images/text/blogButton.png" width="116" height="22" alt="visit" align="left">
-                                        </a>
-                                    </p>
-                                </div>
-                            </div>
-                            <p class="shrink" style=""><em>*The content in this section is provided for general informational purposes only and
-                                    represents the individuals&rsquo; opinions on what they deemed  relevant Sibos content. Wells Fargo does
-                                    not endorse and is not responsible for the content, links, privacy policy, or security policy of the website.</em></p></td>
-                    </tr>
-                    <tr>
-                        <td width="35%" valign="top" class="blocks" style="position: relative;"><h3><a class="learn" href="giving.html">learn
-                                    more</a>Get involved</h3>
-                            <p><img  src="../images/photos/bird.png" alt="bird" width="93" height="90" style="
+                <tr>
+                    <td colspan="2"><p>Thank you for visiting the Wells Fargo Sibos webpage. Once again, our Global Financial Institutions (GFI) 
+                            team has an exciting program lined up for you during the week of the conference, 
+                            and we look forward to seeing you in Dubai.</p>
+                        <p>For more information about Sibos 2013, please visit the official Sibos website at <a href="http://www.sibos.com">sibos.com</a>. </p></td>
+                    <td>&nbsp;</td>
+                </tr>
+                <tr>
+                    <td width="32%" rowspan="2" valign="top" class="blocks"><h3><a class="learn" href="visit.html">learn more</a>Sibos events </h3>
+                        <p><strong>Sunday, October 28</strong><br>
+                            5:00 p.m. – 8:00 p.m.<br>
+                            <a href="../email/727872/index.html">Annual Sibos Celebration</a><br>
+                            Taiko-en<br>
+                            Space is limited, <a href="../email/727872/index.html">RSVP here</a>.</p>
+                        <p><strong>Tuesday, October 30</strong><br>
+                            <em>Transparency: The new paradigm impacting Global Transaction Banking</em><br>
+                            3:00 p.m. – 4:00 pm<br>
+                            Katsura Room L5<br>
+                            Hyatt Regency Hotel<br>
+                            Space is limited, <a href="../email/734818/index.html"> RSVP here</a>. <em><br>
+                            Please speak with your relationship manager about availability.</em></p>
+                        <p><strong>Tuesday, October 30</strong><br>
+                            4:00 p.m. – 5:30 p.m.<br>
+                            <a href="../email/727874/index.html">Booth reception</a><br>
+                            Wells Fargo booth No. 4B06, Hall 4 </p></td>
+                    <td width="35%" rowspan="2" valign="top" class="blocks"><h3><a class="learn" href="giving.html">learn
+                                more</a>Get involved</h3>
+                        <p>
+                            <img  src="../images/photos/bird.png" alt="bird" width="93" height="90" style="
 
                                      bottom: -11px;
                                      float: right;
                                      right: -11px;
 
-                                     ">Wells Fargo is proud to partner with <a href="http://www.globalgiving.org/">GlobalGiving.org</a> again
-                                to offer you a wonderful program that gives back to our communities.</p>
-                        </td>
-                    </tr>
+                                     ">
+                            Wells Fargo is proud to partner with <a href="http://www.globalgiving.org/">GlobalGiving.org</a> again
+                            to offer you a wonderful program that gives back to our communities.</p></td>
+                    <td width="33%" height="147" valign="top" class="blocks" style="position: relative;"><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
+                            <img src="../images/text/4B06.png" width="239" height="74" alt="Booth 4B06">
+                        </a></td>
+                </tr>
+                <tr>
+                    <td width="33%" valign="top" class="blocks" style="position: relative;"><a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">
+                            <img src="../images/text/4B06.png" width="239" height="74" alt="Booth 4B06">
+                        </a></td>
+                </tr>
                 </table>
                 <div class="popup">
                     <img id="booth_map" src="../images/misc/booth_map.gif" tabindex="-1">
                     <br>
-                    CLICK OUTSIDE IMAGE TO CLOSE </div>
-            </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
-
-<div id="footer">
-    <div id="sharebar">
-        <script src="http://w.sharethis.com/button/buttons.js"></script>
-        <p class="cap">Share this page
-            <!-- -->
-	        <span id="st_twitter"></span>
-            <!-- -->
-            <span id="st_linkedin"></span>
-            <!-- -->
-            <span id="st_email"></span>
-            <!-- -->
-            <span id="st_facebook"></span>
-            <!-- -->
-            <span id="st_googleplus"></span>
-            <!-- -->
-            <span id="st_pinterest"></span>
-            <!-- -->
-        </p>
-	    <script src="../script/share.js"></script>
-    </div>
-    <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
-    <script src="../lib/nosel.js"></script>
-    <script src="../script/main.js"></script>
-    <script src="../script/ecg-ga.js"></script>
-</div>
-<!-- #EndLibraryItem --></div>
+                    CLICK OUTSIDE IMAGE TO CLOSE
+                </div>
+            </div>
+            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+            <div id="footer">
+                <div id="sharebar">
+                    <script src="http://w.sharethis.com/button/buttons.js"></script>
+                    <p class="cap">Share this page 
+                        <!-- --> 
+                        <span id="st_twitter"></span> 
+                        <!-- --> 
+                        <span id="st_linkedin"></span> 
+                        <!-- --> 
+                        <span id="st_email"></span> 
+                        <!-- --> 
+                        <span id="st_facebook"></span> 
+                        <!-- --> 
+                        <span id="st_googleplus"></span> 
+                        <!-- --> 
+                        <span id="st_pinterest"></span> 
+                        <!-- --> 
+                    </p>
+                    <script src="../script/share.js"></script>
+                </div>
+                <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
+                <script src="../lib/nosel.js"></script> 
+                <script src="../script/main.js"></script> 
+                <script src="../script/ecg-ga.js"></script>
+            </div>
+            <!-- #EndLibraryItem -->
+        </div>
     </body>
 </html>
