--- a/pages/explore.html
+++ b/pages/explore.html
@@ -18,77 +18,114 @@
         <link rel="stylesheet" href="../style/main.css" type="text/css">
     </head>
     <body>
-        <div id="all"><!-- #BeginLibraryItem "../lib/navbar.lbi" -->
-<div id="head">
-    <div class="mast"><img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left"> <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right"></div>
-    <div class="navb"><!--
---> <a href="home.html">Home</a> <!--
---> <a href="about.html">About Wells Fargo</a> <!--
---> <a href="events.html">Sibos Events</a> <!--
---> <a href="boot.html">Wells Fargo Booth</a><!--
---> <a href="speakers.html">Sibos Speakers</a><!--
---> <a href="explore.html">Explore Dubai</a> <!--
---> <a href="giving.html">Charitable giving</a> <!--
---> </div>
-</div>
-<!-- #EndLibraryItem --><div id="feature"><img class="banner" src="../images/banner/bannerD.jpg" width="898" height="241" alt="">
+        <div id="all">
+            <!-- #BeginLibraryItem "../lib/navbar.lbi" -->
+            <div id="head">
+                <div class="mast">
+                    <img src="../images/header/wf-sibos.png" alt="Sibos 2012" width="222" height="64" align="left">
+                    <img src="../images/header/stagecoach.png" alt="Together we’ll go far" width="227" height="64" align="right">
+                </div>
+                <div class="navb">
+                    <!--
+--> 
+                    <a href="home.html">Home</a> 
+                    <!--
+--> 
+                    <a href="about.html">About Wells Fargo</a> 
+                    <!--
+--> 
+                    <a href="events.html">Sibos Events</a> 
+                    <!--
+--> 
+                    <a href="booth.html">Wells Fargo Booth</a> 
+                    <!--
+--> 
+                    <a href="speakers.html">Sibos Speakers</a> 
+                    <!--
+--> 
+                    <a href="explore.html">Explore Dubai</a> 
+                    <!--
+--> 
+                    <a href="giving.html">Charitable giving</a> 
+                    <!--
+-->
+                </div>
+            </div>
+            <!-- #EndLibraryItem -->
+            <div id="feature">
+                <img class="banner" src="../images/banner/bannerD.jpg" width="898" height="241" alt="">
                 <table border="0" cellspacing="10">
-                    <tr>
-                        <td width="72%" rowspan="2" valign="top"><h2>Explore Osaka</h2>
-                            <p> For travelers and traders, Osaka has long served as the gateway to Japan.
-                                Situated in the Kansai region of Japan’s main island of Honshu, Osaka is Japan’s third-largest city by population.
-                                It’s also recognized as the country’s commercial center, thanks in large part to the vast network of river and sea routes that meet at its shores. </p>
-                            <h4> While in Osaka, you may want to visit: </h4>
-                            <ul>
-                                <li><a href="http://www.osaka-info.jp/en/search/detail/sightseeing_1933.html" target="_blank">Osaka Castle</a> <br>
-                                    The city’s most recognizable symbol played a major role in unifying Japan during the sixteenth century </li>
-                                <li><a href="http://www.osaka-info.jp/en/search/detail/sightseeing_1158.html" target="_blank">Sumiyoshi-taisha Shrine</a><br>
-                                    Osaka’s most famous shrine is home to three locally revered gods </li>
-                                <li><a href="http://www.osaka-info.jp/en/search/detail/sightseeing_2177.html" target="_blank">Shitennoji Temple</a><br>
-                                    The first Buddhist and Japan’s oldest officially administered temple is believed to have been constructed in the late fifth century </li>
-                                <li><a href="http://www.osaka-info.jp/en/search/detail/sightseeing_3147.html" target="_blank">Floating Garden Observatory</a><br>
-                                    Located on a bridge connecting the twin towers of the Umeda Sky Building, it provides breathtaking views of Osaka and beyond </li>
-                                <li><a href="http://www.osaka-info.jp/en/search/detail/sightseeing_765.html" target="_blank">Universal Studios Japan</a><br>
-                                    A full service amusement park complete with theme rides, shows, restaurants, and shopping </li>
-                                <li><a href="http://www.osaka-info.jp/en/search/detail/sightseeing_549.html" target="_blank">Osaka Aquarium Kaiyukan</a><br>
-                                    One of the world’s largest aquariums, it’s home to 30,000 marine animals representing 580 species </li>
-                            </ul></td>
-                        <td valign="top">&nbsp;</td>
-                        <td valign="top"><p>&nbsp;</p></td>
-                    </tr>
-                    <tr>
-                        <td width="7%" valign="top">&nbsp;</td>
-                        <td width="21%" valign="top">&nbsp;</td>
-                    </tr>
+                <tr>
+                    <td width="72%" rowspan="2" valign="top"><h2>EXPLORE DUBAI</h2>
+                        <p>Located on the southern shore of the Arabian Gulf, Dubai 
+                            is the second-largest of the seven Emirates that make up the United Arab Emirates. 
+                            This thriving metropolis of over two million residents features architecture and attractions that rival 
+                            the best that the rest of the world has to offer. </p>
+                        <h4>While in Dubai, you may want to visit:</h4>
+                        <ul type="disc">
+                            <li><strong><u>Burj Khalifa</u></strong> (http://www.tripadvisor.com/Attraction_Review-g295424-d676922-Reviews-Burj_Khalifa-Dubai_Emirate_of_Dubai.html),      
+                                the world&rsquo;s tallest building, features a 124th-floor     
+                                outdoor observation deck with a telescope that allows you to examine the     
+                                landscape in real-time or view previously saved images from different     
+                                times of day and weather conditions. </li>
+                        </ul>
+                        <ul type="disc">
+                            <li><strong><u>Dolphin Bay</u></strong> (include
+                                link: <a href="http://www.tripadvisor.com/Attraction_Review-g295424-d1176635-Reviews-Dolphin_Bay-Dubai_Emirate_of_Dubai.html">http://www.tripadvisor.com/Attraction_Review-g295424-d1176635-Reviews-Dolphin_Bay-Dubai_Emirate_of_Dubai.html</a>),     
+                                one of the world&rsquo;s largest dolphin habitats gives you a      
+                                chance to stand, swim, or scuba dive with these beautiful, intelligent      creatures.</li>
+                        </ul>
+                        <p>&nbsp;</p>
+                        <ul type="disc">
+                            <li><strong><u>Ski Dubai</u></strong> (include link:     
+                                http://www.tripadvisor.com/Attraction_Review-g295424-d561527-Reviews-Ski_Dubai-Dubai_Emirate_of_Dubai.html) is the world&rsquo;s third-largest indoor ski slope and the first    
+                                to open in the Middle East.</li>
+                        </ul>
+                        <ul type="disc">
+                            <li><strong><u>Dubai Fountain</u></strong> (include 
+                                link: <a href="http://www.tripadvisor.com/Attraction_Review-g295424-d1936354-Reviews-Dubai_Fountains-Dubai_Emirate_of_Dubai.html">http://www.tripadvisor.com/Attraction_Review-g295424-d1936354-Reviews-Dubai_Fountains-Dubai_Emirate_of_Dubai.html</a>)      shoots water up to 500 feet high as music plays during      daily performances on the Burj Khalifa Lake.</li>
+                        </ul>
+                        <p>&nbsp;</p>
+                        <ul type="disc">
+                            <li><strong><u>Dubai Aquarium &amp; Underwater Zoo</u></strong> (include link: <a href="http://www.tripadvisor.com/Attraction_Review-g295424-d1792285-Reviews-Dubai_Aquarium_Underwater_Zoo-Dubai_Emirate_of_Dubai.html">http://www.tripadvisor.com/Attraction_Review-g295424-d1792285-Reviews-Dubai_Aquarium_Underwater_Zoo-Dubai_Emirate_of_Dubai.html</a>),      one of the largest tanks in the world, is home to more      than 33,000 animals and sea creatures you can examine from inside its      acrylic walk-through tunnel.</li>
+                        </ul></td>
+                    <td valign="top">&nbsp;</td>
+                    <td valign="top"><p>&nbsp;</p></td>
+                </tr>
+                <tr>
+                    <td width="7%" valign="top">&nbsp;</td>
+                    <td width="21%" valign="top">&nbsp;</td>
+                </tr>
                 </table>
-            </div><!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
-
-<div id="footer">
-    <div id="sharebar">
-        <script src="http://w.sharethis.com/button/buttons.js"></script>
-        <p class="cap">Share this page
-            <!-- -->
-	        <span id="st_twitter"></span>
-            <!-- -->
-            <span id="st_linkedin"></span>
-            <!-- -->
-            <span id="st_email"></span>
-            <!-- -->
-            <span id="st_facebook"></span>
-            <!-- -->
-            <span id="st_googleplus"></span>
-            <!-- -->
-            <span id="st_pinterest"></span>
-            <!-- -->
-        </p>
-	    <script src="../script/share.js"></script>
-    </div>
-    <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
-    <script src="../lib/nosel.js"></script>
-    <script src="../script/main.js"></script>
-    <script src="../script/ecg-ga.js"></script>
-</div>
-<!-- #EndLibraryItem --></div>
+            </div>
+            <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
+            <div id="footer">
+                <div id="sharebar">
+                    <script src="http://w.sharethis.com/button/buttons.js"></script>
+                    <p class="cap">Share this page 
+                        <!-- --> 
+                        <span id="st_twitter"></span> 
+                        <!-- --> 
+                        <span id="st_linkedin"></span> 
+                        <!-- --> 
+                        <span id="st_email"></span> 
+                        <!-- --> 
+                        <span id="st_facebook"></span> 
+                        <!-- --> 
+                        <span id="st_googleplus"></span> 
+                        <!-- --> 
+                        <span id="st_pinterest"></span> 
+                        <!-- --> 
+                    </p>
+                    <script src="../script/share.js"></script>
+                </div>
+                <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
+                <script src="../lib/nosel.js"></script> 
+                <script src="../script/main.js"></script> 
+                <script src="../script/ecg-ga.js"></script>
+            </div>
+            <!-- #EndLibraryItem -->
+        </div>
         <script type="text/javascript"></script>
     </body>
 </html>
