--- a/pages/home.html
+++ b/pages/home.html
@@ -12,10 +12,10 @@
         <meta  id="head6" property="og:image"       content="http://www.wellsfargomedia.com/sibos2012/images/header/wf-sibos.png">
         <meta  id="head7" property="og:site_name"   content="www.wellsfargomedia.com">
         <meta  id="head8" property="og:type"        content="microsite">
-        <script src="../lib/jquery-1.7.2.js"></script>
-        <script src="../script/init.js"></script>
-        <script src="../lib/cansole.js"></script>
-        <link rel="stylesheet" href="../style/main.css" type="text/css">
+        <script src="/lib/jquery/1.7.2/jquery.js"></script>
+        <script src="/lib/js/console.js"></script>
+        <script src="../scripts/init.js"></script>
+        <link rel="stylesheet" href="../styles/screen.css" type="text/css">
     </head>
     <body>
         <div id="all">
@@ -27,26 +27,26 @@
                 </div>
                 <div class="navb">
                     <!--
---> 
-                    <a href="home.html">Home</a> 
+-->
+                    <a href="home.html">Home</a>
                     <!--
---> 
-                    <a href="about.html">About Wells Fargo</a> 
+-->
+                    <a href="about.html">About Wells Fargo</a>
                     <!--
---> 
-                    <a href="events.html">Sibos Events</a> 
+-->
+                    <a href="events.html">Sibos Events</a>
                     <!--
---> 
-                    <a href="booth.html">Wells Fargo Booth</a> 
+-->
+                    <a href="booth.html">Wells Fargo Booth</a>
                     <!--
---> 
-                    <a href="speakers.html">Sibos Speakers</a> 
+-->
+                    <a href="speakers.html">Sibos Speakers</a>
                     <!--
---> 
-                    <a href="explore.html">Explore Dubai</a> 
+-->
+                    <a href="explore.html">Explore Dubai</a>
                     <!--
---> 
-                    <a href="giving.html">Charitable giving</a> 
+-->
+                    <a href="giving.html">Charitable giving</a>
                     <!--
 -->
                 </div>
@@ -71,8 +71,8 @@
                 </div>
                 <table border="0" cellspacing="10">
                 <tr>
-                    <td colspan="2"><p>Thank you for visiting the Wells Fargo Sibos webpage. Once again, our Global Financial Institutions (GFI) 
-                            team has an exciting program lined up for you during the week of the conference, 
+                    <td colspan="2"><p>Thank you for visiting the Wells Fargo Sibos webpage. Once again, our Global Financial Institutions (GFI)
+                            team has an exciting program lined up for you during the week of the conference,
                             and we look forward to seeing you in Dubai.</p>
                         <p>For more information about Sibos 2013, please visit the official Sibos website at <a href="http://www.sibos.com">sibos.com</a>. </p></td>
                     <td>&nbsp;</td>
@@ -127,27 +127,27 @@
             <div id="footer">
                 <div id="sharebar">
                     <script src="http://w.sharethis.com/button/buttons.js"></script>
-                    <p class="cap">Share this page 
-                        <!-- --> 
-                        <span id="st_twitter"></span> 
-                        <!-- --> 
-                        <span id="st_linkedin"></span> 
-                        <!-- --> 
-                        <span id="st_email"></span> 
-                        <!-- --> 
-                        <span id="st_facebook"></span> 
-                        <!-- --> 
-                        <span id="st_googleplus"></span> 
-                        <!-- --> 
-                        <span id="st_pinterest"></span> 
-                        <!-- --> 
+                    <p class="cap">Share this page
+                        <!-- -->
+                        <span id="st_twitter"></span>
+                        <!-- -->
+                        <span id="st_linkedin"></span>
+                        <!-- -->
+                        <span id="st_email"></span>
+                        <!-- -->
+                        <span id="st_facebook"></span>
+                        <!-- -->
+                        <span id="st_googleplus"></span>
+                        <!-- -->
+                        <span id="st_pinterest"></span>
+                        <!-- -->
                     </p>
-                    <script src="../script/share.js"></script>
+
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
-                <script src="../lib/nosel.js"></script> 
-                <script src="../script/main.js"></script> 
-                <script src="../script/ecg-ga.js"></script>
+
+                <script src="../script/main.js"></script>
+
             </div>
             <!-- #EndLibraryItem -->
         </div>
