--- a/pages/home.html
+++ b/pages/home.html
@@ -4,15 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=8">
         <title id="head0">Wells Fargo at Sibos 2012</title>
-        <meta  id="head1" name="title"         content="">
-        <meta  id="head2" name="description"   content="">
-        <meta  id="head3" property="og:title"       content="">
-        <meta  id="head4" property="og:description" content="">
-        <meta  id="head5" property="og:url"         content="">
-        <meta  id="head6" property="og:image"       content="http://www.wellsfargomedia.com/sibos2012/images/header/wf-sibos.png">
-        <meta  id="head7" property="og:site_name"   content="www.wellsfargomedia.com">
-        <meta  id="head8" property="og:type"        content="microsite">
-        <script src="/lib/jquery/1.7.2/jquery.js"></script>
+        <script src="../scripts/metas.js"></script>
+        <script src="/lib/jquery/1.8.2/jquery.js"></script>
         <script src="/lib/js/console.js"></script>
         <script src="../scripts/init.js"></script>
         <link rel="stylesheet" href="../styles/screen.css" type="text/css">
@@ -146,7 +139,7 @@
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
 
-                <script src="../script/main.js"></script>
+                <script src="../scripts/main.js"></script>
 
             </div>
             <!-- #EndLibraryItem -->
