--- a/pages/booth.html
+++ b/pages/booth.html
@@ -5,10 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=8">
         <title id="head0">Wells Fargo at Sibos 2012</title>
         <script src="../scripts/metas.js"></script>
+
+        <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
+        <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
-        <script src="/lib/js/console.js"></script>
-        <script src="../scripts/init.js"></script>
-        <link rel="stylesheet" href="../styles/screen.css" type="text/css">
+        <script src="/lib/modernizr/2.6.2/modernizr.js"></script>
+        <script src="/lib/js/global.js"></script>
+        <!--[if IE]><script>
+            window.isIE = true;
+            $(function(){ $('html').addClass('msie'); });
+            </script><![endif]-->
+        <script src="../scripts/main.js"></script>
+
         <!-- VIDEO BOOTSTRAP -->
         <link href="../lib/video-js/video-js.css" rel="stylesheet">
         <script src="../lib/video-js/video.js"></script>
@@ -25,46 +33,46 @@
                 </div>
                 <div class="navb">
                     <!--
--->
+                    -->
                     <a href="home.html">Home</a>
                     <!--
--->
+                    -->
                     <a href="about.html">About Wells Fargo</a>
                     <!--
--->
+                    -->
                     <a href="events.html">Sibos Events</a>
                     <!--
--->
+                    -->
                     <a href="booth.html">Wells Fargo Booth</a>
                     <!--
--->
+                    -->
                     <a href="speakers.html">Sibos Speakers</a>
                     <!--
--->
+                    -->
                     <a href="explore.html">Explore Dubai</a>
                     <!--
--->
+                    -->
                     <a href="giving.html">Charitable giving</a>
                     <!--
--->
+                    -->
                 </div>
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
                 <img class="banner" src="../images/banner/bannerB.jpg" width="898" height="241" alt="">
                 <table border="0" cellspacing="10">
-                <tr>
-                    <td valign="top"><h2>WELLS FARGO BOOTH</h2>
-                        <p>As a repeat exhibitor, Wells Fargo is excited to bring you a booth experience like no other. We look forward to seeing you at booth <u>No. F87</u>.</p>
-                        <p><strong>Learn. </strong>Stop by to take your picture in front of the Buffalo Bill stagecoach and learn more about the history of Wells Fargo.<br>
-                            <strong>Explore. </strong>Experience all the exciting new enhancements we&rsquo;ve made to our Sibos booth this year.<br>
-                            <strong>Connect.</strong> Our senior leadership and relationship managers look forward to connecting with you in our booth. </p>
-                        <p>(link to exhibition floor map)  (include booth pictures)<br>
-                            <a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">View exhibition floor map</a> | <a title="rendered_booth" class="popup pic" href="../images/misc/rendered_booth.jpg">View Wells Fargo booth rendering</a></p></td>
+                    <tr>
+                        <td valign="top"><h2>WELLS FARGO BOOTH</h2>
+                            <p>As a repeat exhibitor, Wells Fargo is excited to bring you a booth experience like no other. We look forward to seeing you at booth <u>No. F87</u>.</p>
+                    <p><strong>Learn. </strong>Stop by to take your picture in front of the Buffalo Bill stagecoach and learn more about the history of Wells Fargo.<br>
+                        <strong>Explore. </strong>Experience all the exciting new enhancements we&rsquo;ve made to our Sibos booth this year.<br>
+                        <strong>Connect.</strong> Our senior leadership and relationship managers look forward to connecting with you in our booth. </p>
+                    <p>(link to exhibition floor map)  (include booth pictures)<br>
+                        <a title="booth_map" class="popup pic" href="../images/misc/booth_map.gif">View exhibition floor map</a> | <a title="rendered_booth" class="popup pic" href="../images/misc/rendered_booth.jpg">View Wells Fargo booth rendering</a></p></td>
                     <td width="30%" valign="top"><p><strong>&lt;tile ad for booth check in gift&gt;</strong><br>
                             <strong>Want one of these? (image of 3 in 1 phone charger booth giveaway)</strong></p>
                         <p>Check into our booth via Foursquare or your LinkedIn account and receive a 3 in 1 phone charger while supplies last. You can also tweet about us via Twitter to receive your free gift.</p></td>
-                </tr>
+                    </tr>
                 </table>
                 <p class="shrink">*You may need Adobe Reader to read PDF files. <a href="http://get.adobe.com/reader">Download</a> Adobe Reader for free.</p>
                 <div class="popup">
@@ -97,7 +105,7 @@
             <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <div id="footer">
                 <div id="sharebar">
-                    <script src="http://w.sharethis.com/button/buttons.js"></script>
+                    <!-- <script src="http://w.sharethis.com/button/buttons.js"></script> -->
                     <p class="cap">Share this page
                         <!-- -->
                         <span id="st_twitter"></span>
@@ -113,12 +121,8 @@
                         <span id="st_pinterest"></span>
                         <!-- -->
                     </p>
-
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
-
-                <script src="../scripts/main.js"></script>
-
             </div>
             <!-- #EndLibraryItem -->
         </div>
