--- a/pages/home.html
+++ b/pages/home.html
@@ -5,10 +5,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=8">
         <title id="head0">Wells Fargo at Sibos 2012</title>
         <script src="../scripts/metas.js"></script>
+
+        <link href="../styles/screen.css" media="all" rel="stylesheet" type="text/css">
+        <link href="../styles/print.css" media="print" rel="stylesheet" type="text/css">
         <script src="/lib/jquery/1.8.2/jquery.js"></script>
-        <script src="/lib/js/console.js"></script>
-        <script src="../scripts/init.js"></script>
-        <link rel="stylesheet" href="../styles/screen.css" type="text/css">
+        <script src="/lib/modernizr/2.6.2/modernizr.js"></script>
+        <script src="/lib/js/global.js"></script>
+        <!--[if IE]><script>
+            window.isIE = true;
+            $(function(){ $('html').addClass('msie'); });
+            </script><![endif]-->
+        <script src="../scripts/main.js"></script>
     </head>
     <body>
         <div id="all">
@@ -119,7 +126,7 @@
             <!-- #BeginLibraryItem "../lib/navfoo.lbi" -->
             <div id="footer">
                 <div id="sharebar">
-                    <script src="http://w.sharethis.com/button/buttons.js"></script>
+                    <!-- <script src="http://w.sharethis.com/button/buttons.js"></script> -->
                     <p class="cap">Share this page
                         <!-- -->
                         <span id="st_twitter"></span>
@@ -135,12 +142,8 @@
                         <span id="st_pinterest"></span>
                         <!-- -->
                     </p>
-
                 </div>
                 <p>© 2013 Wells Fargo Bank, N.A. All rights reserved. ECG-999915</p>
-
-                <script src="../scripts/main.js"></script>
-
             </div>
             <!-- #EndLibraryItem -->
         </div>
