new colors and banner

--- a/pages/about.html
+++ b/pages/about.html
@@ -53,7 +53,7 @@
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
-                <img class="banner" src="../images/banner/bannerC.jpg" width="898" height="241" alt="">
+                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
                 <table border="0" cellspacing="10">
                 <tr>
                     <td width="65%" rowspan="2"><h2>ABOUT WELLS FARGO </h2>
