--- a/pages/booth.html
+++ b/pages/booth.html
@@ -59,7 +59,7 @@
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
-                <img class="banner" src="../images/banner/bannerB.jpg" width="898" height="241" alt="">
+                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
                 <table border="0" cellspacing="10">
                     <tr>
                         <td valign="top"><h2>WELLS FARGO BOOTH</h2>
