--- a/pages/explore.html
+++ b/pages/explore.html
@@ -53,7 +53,7 @@
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
-                <img class="banner" src="../images/banner/bannerD.jpg" width="898" height="241" alt="">
+                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
                 <table border="0" cellspacing="10">
                 <tr>
                     <td width="72%" rowspan="2" valign="top"><h2>EXPLORE DUBAI</h2>
