--- a/pages/giving.html
+++ b/pages/giving.html
@@ -53,7 +53,7 @@
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
-                <img class="banner" src="../images/banner/bannerF.jpg" width="898" height="241" alt="">
+                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
                 <table border="0" cellspacing="10">
                 <tr>
                     <td width="70%" rowspan="4" valign="top"><div id="Charitable">
@@ -206,11 +206,9 @@
                             Result:<strong> $4,200</strong> (42%) </p></td>
                 </tr>
                 <tr>
-                    <td valign="top"><script>
-                            /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-                            givingLinks();
-                            /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
-                            </script></td>
+                    <td valign="top">
+                        <div id="GivingLinks"></div>
+                    </td>
                 </tr>
                 </table>
             </div>
