--- a/pages/home.html
+++ b/pages/home.html
@@ -55,19 +55,19 @@
             <div id="feature">
                 <div id="banner" style="display: none;">
                     <a href="visit.html">
-                        <img class="banner" src="../images/banner/bannerB_button.jpg" width="898" height="241" alt="visit">
+                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
                     </a> <a href="about.html">
-                        <img class="banner" src="../images/banner/bannerC_button.jpg" width="898" height="241" alt="about">
+                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
                     </a> <a href="explore.html">
-                        <img class="banner" src="../images/banner/bannerD_button.jpg" width="898" height="241" alt="explore">
+                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
                     </a> <a href="pubs.html">
-                        <img class="banner" src="../images/banner/bannerE_button.jpg" width="898" height="241" alt="pubs">
+                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
                     </a> <a href="giving.html">
-                        <img class="banner" src="../images/banner/bannerF_button.jpg" width="898" height="241" alt="giving">
+                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
                     </a> <a href="photos.html">
-                        <img class="banner" src="../images/banner/bannerG_button.jpg" width="898" height="241" alt="photos">
+                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
                     </a>
-                    <img class="banner" src="../images/banner/bannerA.jpg" width="898" height="241" alt="home">
+                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
                 </div>
                 <table border="0" cellspacing="10">
                 <tr>
