--- a/pages/booth.html
+++ b/pages/booth.html
@@ -59,8 +59,8 @@
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
-                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
-                <table border="0" cellspacing="10">
+                <img class="banner" src="../images/header/reins.png" alt="">
+                <table>
                     <tr>
                         <td valign="top"><h2>WELLS FARGO BOOTH</h2>
                             <p>As a repeat exhibitor, Wells Fargo is excited to bring you a booth experience like no other. We look forward to seeing you at booth <u>No. F87</u>.</p>
