--- a/pages/events.html
+++ b/pages/events.html
@@ -59,8 +59,8 @@
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
-                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
-                <table border="0" cellspacing="10">
+                <img class="banner" src="../images/header/reins.png" alt="">
+                <table>
                 <tr>
                     <td colspan="2" valign="top"><h2>SIBOS EVENTS</h2>
                         <p>Renew friendships and create new ones. We&rsquo;re proud to be hosting our annual Sibos Celebration reception at Dubai&rsquo;s most prestigious landmark –
