--- a/pages/giving.html
+++ b/pages/giving.html
@@ -53,8 +53,8 @@
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
-                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
-                <table border="0" cellspacing="10">
+                <img class="banner" src="../images/header/reins.png" alt="">
+                <table>
                 <tr>
                     <td width="70%" rowspan="4" valign="top"><div id="Charitable">
                             <h3>TBD</h3>
@@ -85,7 +85,7 @@
                                             works to resolve struggles that children face every day — poverty, hunger, illiteracy, and disease.</li>
                                     </ul> -->
                             </div>
-                            <div id="cemina" class="part">
+                            <div id="cemina" class="part" style="display: none;">
                                 <p class="shrink" style="float: right;">&lt; <a href="giving.html">Charitable giving</a></p>
                                 <h2>CEMINA</h2>
                                 <p>CEMINA was founded by a group of women activists in Brazil who struggled to find a way to communicate with the public about aspirations,
