--- a/pages/home.html
+++ b/pages/home.html
@@ -55,21 +55,21 @@
             <div id="feature">
                 <div id="banner" style="display: none;">
                     <a href="visit.html">
-                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
+                <img class="banner" src="../images/header/reins.png" alt="">
                     </a> <a href="about.html">
-                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
+                <img class="banner" src="../images/header/reins.png" alt="">
                     </a> <a href="explore.html">
-                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
+                <img class="banner" src="../images/header/reins.png" alt="">
                     </a> <a href="pubs.html">
-                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
+                <img class="banner" src="../images/header/reins.png" alt="">
                     </a> <a href="giving.html">
-                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
+                <img class="banner" src="../images/header/reins.png" alt="">
                     </a> <a href="photos.html">
-                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
+                <img class="banner" src="../images/header/reins.png" alt="">
                     </a>
-                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
+                <img class="banner" src="../images/header/reins.png" alt="">
                 </div>
-                <table border="0" cellspacing="10">
+                <table>
                 <tr>
                     <td colspan="2"><p>Thank you for visiting the Wells Fargo Sibos webpage. Once again, our Global Financial Institutions (GFI)
                             team has an exciting program lined up for you during the week of the conference,
