--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -59,8 +59,8 @@
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
-                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
-                <table border="0" cellspacing="10">
+                <img class="banner" src="../images/header/reins.png" alt="">
+                <table>
                 <tr>
                     <td colspan="2" valign="top"><h2>SIBOS SPEAKERS</h2>
                         <p>Hear Wells Fargo subject matter experts speak during these Sibos sessions:</p></td>
