--- a/pages/about.html
+++ b/pages/about.html
@@ -53,8 +53,8 @@
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
-                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
-                <table border="0" cellspacing="10">
+                <img class="banner" src="../images/header/reins.png" alt="">
+                <table>
                 <tr>
                     <td width="65%" rowspan="2"><h2>ABOUT WELLS FARGO </h2>
                         <p>Wells Fargo is one of the largest banks in the United States,
@@ -67,12 +67,12 @@
                             financial needs and help them succeed financially. The GFI team executes this vision by serving the
                             increasing financial needs of financial institutions, central banks, multi-laterals, sovereign wealth funds,
                             and non-bank financial institutions in the markets where we conduct business.</p></td>
-                    <td colspan="2"><p>&nbsp;</p></td>
+                    <td>&nbsp;</td>
+                    <td valign="top" class="blocks ribron"><h3>Resources</h3></td>
                 </tr>
                 <tr>
                     <td width="5%">&nbsp;</td>
-                    <td width="30%" height="182" valign="top" class="blocks"><h3>Resources</h3>
-                        <p>Learn more about Wells Fargo </p>
+                    <td width="30%" valign="top" class="blocks"><p>Learn more about Wells Fargo </p>
                         <ul>
                             <li><a href="https://www.wellsfargo.com/downloads/pdf/about/wellsfargotoday.pdf">Wells Fargo Today</a></li>
                             <li><a href="https://www.wellsfargo.com/downloads/pdf/about/csr/reports/2012-social-responsibility-interim.pdf">Social Responsibility report</a></li>
