--- a/pages/explore.html
+++ b/pages/explore.html
@@ -53,8 +53,8 @@
             </div>
             <!-- #EndLibraryItem -->
             <div id="feature">
-                <img class="banner" src="../images/header/reins.png" width="898" height="241" alt="">
-                <table border="0" cellspacing="10">
+                <img class="banner" src="../images/header/reins.png" alt="">
+                <table>
                 <tr>
                     <td width="72%" rowspan="2" valign="top"><h2>EXPLORE DUBAI</h2>
                         <p>Located on the southern shore of the Arabian Gulf, Dubai
